--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -28,11 +28,6 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
             <form name="form" role="form" (ngSubmit)="register()" [formGroup]="registerForm" *ngIf="!success">
-                <div class="mt-3 alert alert-warning">
-                    <span jhiTranslate="global.messages.info.authenticated.prefix"></span>
-                    <a class="alert-link" (click)="openLogin()" jhiTranslate="global.messages.info.authenticated.link"></a>
-                </div>
-
                 <div class="form-group">
                     <label class="form-control-label" for="login" jhiTranslate="global.form.username.label">Username</label>
                     <input type="text" class="form-control" id="login" name="login" placeholder="{{ 'global.form.username.placeholder' | translate }}"
@@ -151,70 +146,13 @@
                     </div>
                 </div>
 
-                <div class="alert alert-primary">
-                    <span jhiTranslate="register.messages.info.studentinformations.text"></span>
-                </div>
-
-                <div class="form-group" style="width:55%; margin-right:2%; float:left;">
-                    <label class="form-control-label" for="cursus" jhiTranslate="global.form.cursus.composant">Cursus</label>
-                    <select class="form-control" id="cursusComposant" name="cursusComposant" formControlName="cursusComposant">
-                        <option value="INFO">{{ 'ecomApp.Composant.INFO' | translate }}</option>
-                        <option value="MAT">{{ 'ecomApp.Composant.MAT' | translate }}</option>
-                        <option value="PRI">{{ 'ecomApp.Composant.PRI' | translate }}</option>
-                        <option value="TIS">{{ 'ecomApp.Composant.TIS' | translate }}</option>
-                        <option value="GGC">{{ 'ecomApp.Composant.GGC' | translate }}</option>
-                        <option value="E2I">{{ 'ecomApp.Composant.E2I' | translate }}</option>
-                        <option value="IESE">{{ 'ecomApp.Composant.IESE' | translate }}</option>
-                    </select>
-                </div>
-
-                <div class="form-group" style="width:42%; float:left;">
-                    <label class="form-control-label" jhiTranslate="global.form.cursus.level" for="cursusLevel">Academic Level</label>
-                    <input type="number" class="form-control" name="cursusLevel" id="cursusLevel"
-                           formControlName="cursusLevel"/>
-                    
-                    <div *ngIf="registerForm.get('cursusLevel')!.invalid && (registerForm.get('cursusLevel')!.dirty || registerForm.get('cursusLevel')!.touched)">
-                        <small class="form-text text-danger"
-                               *ngIf="registerForm.get('cursusLevel')?.errors?.min"
-                               jhiTranslate="global.messages.validate.sportLevel.min">
-                            Your academic level must be positive.
-                        </small>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="global.form.sportLevel.label" for="sportLevel">Sport Level</label>
-                    <select class="form-control" name="sportLevel" formControlName="sportLevel" id="sportLevel">
-                        <option value="BEGINNER">{{ 'ecomApp.SportLevel.BEGINNER' | translate }}</option>
-                        <option value="BEGINNER2">{{ 'ecomApp.SportLevel.BEGINNER2' | translate }}</option>
-                        <option value="BEGINNERSUP">{{ 'ecomApp.SportLevel.BEGINNERSUP' | translate }}</option>
-                        <option value="PERF">{{ 'ecomApp.SportLevel.PERF' | translate }}</option>
-                        <option value="PERFSUP">{{ 'ecomApp.SportLevel.PERFSUP' | translate }}</option>
-                        <option value="FUN">{{ 'ecomApp.SportLevel.FUN' | translate }}</option>
-                        <option value="FOIL">{{ 'ecomApp.SportLevel.FOIL' | translate }}</option>
-                        <option value="MONITOR">{{ 'ecomApp.SportLevel.MONITOR' | translate }}</option>
-                    </select>
-                </div>
-
-                <div>
-                    <input type="checkbox" id="drivinglicence" name="drivinglicence">
-                    <label class="form-control-label" jhiTranslate="global.form.drivingLicence.label" for="drivingLicence">Sport Level</label>
-                </div>
-
-                <div>
-                    <label class="form-control-label" jhiTranslate="global.form.meetingPlace.label" for="meetingPlace">Meeting Place</label>
-                    <select class="form-control" name="meetingPlace" formControlName="meetingPlace" id="meetingPlace">
-                        <option value="SMH">{{ 'ecomApp.MeetingPlace.SMH' | translate }}</option>
-                        <option value="MINATEC">{{ 'ecomApp.MeetingPlace.MINATEC' | translate }}</option>
-                    </select>
-                </div>
-
-                <hr style="height:0px; visibility:hidden;"></hr>
-
                 <button type="submit" [disabled]="registerForm.invalid" class="btn btn-primary" jhiTranslate="register.form.button">Register</button>
             </form>
 
-            
+            <div class="mt-3 alert alert-warning">
+                <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
+                <a class="alert-link" (click)="openLogin()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
+            </div>
         </div>
     </div>
 </div>
