--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -35,6 +35,14 @@
                     </label>
                 </div>
 
+                <div class="form-check">
+                    <label class="form-check-label" for="isInstructor">
+                        <input class="form-check-input" type="checkbox" name="isInstructor" id="isInstructor" formControlName="isInstructor">
+                        <span jhiTranslate="login.form.isInstructor">Are you an instructor?</span>
+                    </label>
+                </div>
+
+                <br>
                 <button type="submit" class="btn btn-primary" jhiTranslate="login.form.button">Sign in</button>
             </form>
 
@@ -48,4 +56,5 @@
             </div>
         </div>
     </div>
+    
 </div>
